maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:16: error: not found: value x
      if (aBiscuit(x,y)){
                   ^ShortestPathMaze:14: error: type mismatch;
 found   : Unit
 required: Int
  for ( abscisse <- 0 to 10) {
                 ^